Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,6 +64,7 @@ stages:
             displayName: Create imagePullSecret
             inputs:
               action: createSecret
+              connectionType: azureResourceManager
               secretName: $(imagePullSecret)
               dockerRegistryEndpoint: 'Container Registry Connection'
               azureSubscriptionConnection: 'Kubernetes Cluster Connection'
@@ -73,6 +74,7 @@ stages:
             displayName: Deploy to Kubernetes cluster
             inputs:
               action: deploy
+              connectionType: azureResourceManager
               azureSubscriptionConnection: 'Kubernetes Cluster Connection'
               namespace: 'default'
               manifests: |
