--- a/Tailspin.SpaceGame.Web/Properties/launchSettings.json
+++ b/Tailspin.SpaceGame.Web/Properties/launchSettings.json
@@ -25,6 +25,10 @@
     },
     "Docker": {
       "commandName": "Docker",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production",
+        "DOTNET_ENVIRONMENT": "Production"
+      },
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
